@@ -1,8 +1,18 @@
 This is the first quick and dirty Readme fpr SiFiEx.
 
-Just upload the extracted folder to your FTP-Webspace and make sure that the user running the PHP-Scripts is allowed to write and delete files in the included folder "files".
+Just upload the extracted folder to your FTP-Webspace and make sure that the user running the PHP-Scripts is allowed to write and delete files in the included folder "files" and in the folder for SiFiEx.
 
-You can change some configurations by editing config.php. configg.php will be created right after the first time of accessing SiFiEx using a browser by copying config.php.templ to config.php. Of course you can also copy it in this way by yourself if you want to have a config.php before the first access to SiFiEx
+You can change some configurations by editing config.php. config.php will be created right after the first time of accessing SiFiEx using a browser by copying config.php.templ to config.php. Of course you can also copy it in this way by yourself if you want to have a config.php before the first access to SiFiEx
+
+Maximum size for uploaded files. The maximum size of uploaded files depends on the size of your webspace (of course) and some settings in you php.ini.
+Check the values for "upload_max_filesize" and "post_max_size". The lower value will win. Example for 50MB:
+   upload_max_filesize = 50M
+   post_max_size = 50M
+Another way is to create a file called ".htaccess" (the dot in front is important) in the upmost SiFiEx-folder and insert the following lins:
+   php_value upload_max_filesize 50M 
+   php_value post_max_size 50M 
+If you haven't access to the php.ini nor the settings in .htaccess will help (adminstrators can disable this feature) ask your provider to change those values for you
+
 
 You should provide password protection to the whole SiFiEx - see using .htaccess on http://www.freewebmasterhelp.com/tutorials/htaccess/3 for example
 
