@@ -11,6 +11,7 @@
     uploadChooseFile	=> "Bitte w&auml;hlen Sie eine Datei von Ihrer Festplatte aus: ",
     uploadHideSuffix	=> "M&ouml;chten Sie die Endung verbergen (siehe FAQ)?",
     uploadInformMail	=> "M&ouml;chten Sie jemanden informieren? Wenn ja geben Sie bitte eine E-Mail-Adresse an: ",
+    uploadMaxSize	=> "Max. Dateigr&ouml;&szlig;e: ",
     uploadStart		=> "Start: ",
     uploading		=> "Die Datei wird hochgeladen...",
     uploadError		=> "Beim hochladen ist ein Fehler aufgetrten - bitte versuchen Sie es erneut oder fragen Sie den Adminstrator dieser Seite.",
